--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -77,8 +77,7 @@ let gnuThisBlockData;
 
 console.log('#{{block_id}}')
 if (typeof parent.frames['clientframe'].contentWindow.ReactDOM === 'undefined') {
-  gnuThisBlockData = klar.blocks.get('{{template_id}}', '{{block_id}}');
-  setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, gnuThisBlockData), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}')), 300);
+  // setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, klar.blocks.get('{{template_id}}', '{{block_id}}')), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}')), 300);
 } else {
   gnuThisBlockData = klar.blocks.get('{{template_id}}', '{{block_id}}');
   parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, gnuThisBlockData), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}'));
