--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -72,14 +72,10 @@ function Description({ text }) {
 
 }
 
-let gnuThisBlockData;
-
-
 console.log('#{{block_id}}')
 if (typeof parent.frames['clientframe'].contentWindow.ReactDOM === 'undefined') {
   // setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, klar.blocks.get('{{template_id}}', '{{block_id}}')), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}')), 300);
 } else {
-  gnuThisBlockData = klar.blocks.get('{{template_id}}', '{{block_id}}');
-  parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, gnuThisBlockData), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}'));
+  parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, klar.blocks.get('{{template_id}}', '{{block_id}}')), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}'));
 }
 </script>
