--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -73,7 +73,7 @@ function Description({ text }) {
 }
 
 console.log(window.klar)
-console.log(window.page)
+console.log(parent.frames['clientframe'].contentWindow.page)
 if (typeof parent.frames['clientframe'].contentWindow.ReactDOM === 'undefined') {
   // setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, klar.blocks.get('{{template_id}}', '{{block_id}}')), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}')), 300);
 } else {
