--- a/templates/page.html
+++ b/templates/page.html
@@ -279,8 +279,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
 <!-- Test with React Klar blocks -->
-<script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+<!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script> -->
+<!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> -->
 
 <script id="react-code"></script>
 
