--- a/templates/page.html
+++ b/templates/page.html
@@ -277,11 +277,14 @@
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-<!-- Test with React Klar blocks -->
+<!-- Test with React Klar Blocks -->
 <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
-<!-- Klarscript executes when page is loaded. -->
+<!-- Babel-standalone -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.2/babel.min.js"></script>
+
+<!-- Klarscript, executes when page is loaded. -->
 <script>
   function klarScript() {
     // Add 'klar-modal-open' CSS class, when modal is opened
