--- a/templates/page.html
+++ b/templates/page.html
@@ -282,7 +282,8 @@
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
 <!-- Babel-standalone -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.2/babel.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.2/babel.min.js"
+integrity="sha512-PIFbuFMDf7FBKG3v/8tukoMXriQ28iGP3ffFl1rFMnTc+Phty6x5FHsHaKr+JhrL2b/TH4h1uW9xl5T/+YiGVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!-- Klarscript, executes when page is loaded. -->
 <script>
